# api-nexantara

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-41731a4660d7f8e6c4086f09cca82ffc93d293efb0bf619eb7e6e52ebf7b62e7.json  query-57dba1c93a379182add9dc155f6a991ca1ce4b4152f7ef51472d8f0e2375ff4a.json  query-74eae1f555f0fe65e9a0a295d4318b1ebdff2770e90bf5dc440b7ff91f00b56c.json
files/: province.csv
migrations/: 20250805034800_initial_table.sql  20250805034801_initial_table.sql  20250805035126_dummy_data.sql
src/: config.rs  db.rs  main.rs
src/db/migrations/: 20250802153705_init_table.sql  20250802155517_dummy_data.sql
src/docs/: api_docs.rs  mod.rs
src/handlers/: district.rs  mod.rs  province.rs  regency.rs  village.rs
src/middleware/: api_key.rs
src/models/: district.rs  mod.rs  province.rs  regency.rs  village.rs
src/repository/: district.rs  province.rs  regency.rs  village.rs
src/services/: district.rs  mod.rs  province.rs  regency.rs  village.rs
