[package]
name = "nexantara-api"
version = "0.1.0"
edition = "2024"
default-run = "nexantara-api"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-service = "2.0.3"
futures-util = "0.3.31"
csv = "1"
log = "0.4"
env_logger = "0.10"
futures = "0.3"